Comeco de filtro e css finalizado

--- a/todolistReact/todo/src/App.css
+++ b/todolistReact/todo/src/App.css
@@ -92,3 +92,17 @@ select {
 .todo-form {
   padding-bottom: 1.5rem;
 }
+.filter,
+.search {
+  border-bottom: 1px solid #555;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+.filter-options {
+  display: flex;
+  justify-content: space-between;
+  gap: 3rem;
+}
+.filter-options div {
+  flex: 1 1 0;
+}
